fix(i18n): Final deep scan - translate panel-empty, export, and disabled sources strings
- App.ts: 2 showError calls (All sources/Intel sources disabled)
- PopulationExposurePanel: 'No exposure data available' panel-empty
- SatelliteFiresPanel: 'No fire data available' panel-empty
- UcdpEventsPanel: 'No events in this category' panel-empty
- ClimateAnomalyPanel: 'No significant anomalies detected' panel-empty
- export.ts: Export Data title + Export CSV/JSON button labels
- Added 8 new common.* keys to en.json and fr.json
- Added t() import to export.ts

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -726,6 +726,12 @@
     "failedClusterNews": "Failed to cluster news",
     "noNewsAvailable": "No news available",
     "noActiveTechHubs": "No active tech hubs",
-    "noActiveGeoHubs": "No active geopolitical hubs"
+    "noActiveGeoHubs": "No active geopolitical hubs",
+    "allSourcesDisabled": "All sources disabled",
+    "allIntelSourcesDisabled": "All Intel sources disabled",
+    "noEventsInCategory": "No events in this category",
+    "exportCsv": "Export CSV",
+    "exportJson": "Export JSON",
+    "exportData": "Export Data"
   }
 }
